--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <div  style="color:blue; padding:5px; font-family: Arial;" id="root"></div>
-    <script type="text/babel" src="js/myHello.js"></script>
+    <script type="text/babel" src="static/js/myHello.js"></script>
 </body>
 </html>
