--- a/templates/todos.html
+++ b/templates/todos.html
@@ -21,7 +21,8 @@
        </ul>
     </h4>
     <br>
+    <br>
     <div  style="color:blue; padding:5px; font-family: Arial;" id="root"></div>
-    <script type="text/babel" src="static/js/myHello.js"></script>
+    <script type="text/babel" src="static/js/myTodos.js"></script>
 </body>
 </html>
